[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opp"
version = "0.1.0"
description = "CLI para gerenciar e executar comandos por alias"
authors = [{ name = "Victor" }]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
opp = "opp.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"opp.help" = ["*.json"]
