[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opp"
version = "0.1.1"
description = "CLI para gerenciar e executar comandos por alias"
authors = [{ name = "Victor" }]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
opp = "opp.cli:main"

[tool.setuptools]
packages = ["opp"]

[tool.setuptools.package-data]
opp = ["help_opp.json"]
